--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -87,6 +87,12 @@
     <Compile Include="AddUser.Designer.cs">
       <DependentUpon>AddUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="AssignTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AssignTest.Designer.cs">
+      <DependentUpon>AssignTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AssignTest.resx">
+      <DependentUpon>AssignTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
